feat(doc): css positioning cheat-sheet
creation de la feuille & 1ere version du doc

--- a/src/index.html
+++ b/src/index.html
@@ -227,6 +227,14 @@
             </div>
             <div class="title">Golang</div>
           </a>
+        </div>
+        <div class="item">
+          <a href="./css-positioning/index.html">
+            <div class="img-item">
+              <img src="./assets/images/css-positioning.png" />
+            </div>
+            <div class="title">css-positioning</div>
+          </a>
         </div><!-- inject a new cheat sheet languages -->
       </div>
     </section>
